--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
+<html>
+  <head>
+    <title>Practice</title>
+      <link rel="stylesheet" type="text/css" href=portfolio.css>
+  </head>
 <nav>
   <ul id='navbar'>
     <li><a href="#welcome-section">About</a></li>
