--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>Practice</title>
-      <link rel="stylesheet" type="text/css" href=portfolio.css>
+      <link rel="stylesheet" type="text/css" href=portfolio.css />
   </head>
 <nav>
   <ul id='navbar'>
@@ -10,7 +10,7 @@
     <li><a href="#contact">Contact</a></li>
   </ul>
 </nav>
-
+    
 <div id="welcome-section" class="intro">
 
   <h1>Alex Lundberg</h1>
@@ -60,3 +60,4 @@
 <footer>**This is just a fake portfolio.. All the projects and contact details given are not real..
   <p>&copy; Created for <a href="https://www.freecodecamp.com/" target="_blank">FreeCodeCamp</a></p>
 </footer>
+</html>
