--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>Practice</title>
-      <link rel="stylesheet" type="text/css" href=portfolio.css>
+      <link rel="stylesheet" type="text/css" href=https://lundbird.github.io/portfolio.css>
   </head>
 <nav>
   <ul id='navbar'>
