--- a/index.html
+++ b/index.html
@@ -18,30 +18,30 @@
 
 </div>
 <div id="projects" class="work">
-  <h2 class="work-header">These are some of my projects..</h2>
-  <a href="https://codepen.io/FreeCodeCamp/pen/NNvBQW" target="_blank" class="project project-tile">
-    <img class="project-pic" src="https://cloud.githubusercontent.com/assets/15967809/17642794/d084d718-6171-11e6-83fa-ede5d0a67ad2.png" alt="project">
-    <div class="project-title">Tribute Page</div>
+  <h2 class="work-header">Top Personal Projects</h2>
+  <a href="https://github.com/lundbird/Chinesepod-Webscraper" target="_blank" class="project project-tile">
+    <img class="project-pic" src="photos/chinesepod.jpg" alt="project">
+    <div class="project-title">ChinesePod Webscraper</div>
   </a>
-  <a href="https://codepen.io/FreeCodeCamp/pen/ONjoLe" target="_blank" class="project project-tile">
-    <img class="project-pic" src="https://cloud.githubusercontent.com/assets/15967809/17642771/7cd6a0c4-6171-11e6-87fb-915f6084d104.png" alt="project">
-    <div class="project-title">Random Quote Machine</div>
+  <a href="https://github.com/lundbird/Material-science-kaggle" target="_blank" class="project project-tile">
+    <img class="project-pic" src="photos/SemiConductors.PNG" alt="project">
+    <div class="project-title">SemiConductor Analysis</div>
   </a>
   <a href="https://codepen.io/FreeCodeCamp/pen/PNKdjo" target="_blank" class="project project-tile">
     <img class="project-pic" src="https://cloud.githubusercontent.com/assets/15967809/17642772/7d02406c-6171-11e6-8c79-40a2933163dc.png" alt="project">
-    <div class="project-title">JavaScript Calculator</div>
+    <div class="project-title">Past stock performance doesn't influence future performance</div>
   </a>
   <a href="https://codepen.io/FreeCodeCamp/pen/mVEJag" target="_blank" class="project project-tile">
     <img class="project-pic" src="https://cloud.githubusercontent.com/assets/15967809/17642773/7d08cb94-6171-11e6-8c45-22e7cf64683e.png" alt="project">
-    <div class="project-title">Map Data Across the Globe</div>
+    <div class="project-title">RaspberryPi Intro</div>
   </a>
   <a href="https://codepen.io/FreeCodeCamp/pen/wGqEga" target="_blank" class="project project-tile">
     <img class="project-pic" src="https://cloud.githubusercontent.com/assets/15967809/17642774/7d091806-6171-11e6-8d47-ecf2f2833fe2.png" alt="project">
-    <div class="project-title">Wikipedia Viewer</div>
+    <div class="project-title">Selenium Robo Investor</div>
   </a>
   <a href="https://codepen.io/FreeCodeCamp/pen/KzXQgy" target="_blank" class="project project-tile">
     <img class="project-pic" src="https://cloud.githubusercontent.com/assets/15967809/17642775/7d354304-6171-11e6-8b56-66eee4681d88.png" alt="project">
-    <div class="project-title">Tic Tac Toe Game</div>
+    <div class="project-title">Titanic Survival Analysis</div>
   </a>
 
   <a href="https://codepen.io/FreeCodeCamp/" class="show-all" target="_blank">Show all</a>
