update with profile pic

--- a/index.html
+++ b/index.html
@@ -10,12 +10,10 @@
     <li><a href="#contact">Contact</a></li>
   </ul>
 </nav>
-    
 <div id="welcome-section" class="intro">
-
   <h1>Alex Lundberg</h1>
   <p>Software Developer</p>
-
+    <img id="profile" class="personal-pic" src="photos/Profile.PNG" alt="headshot">
 </div>
 <div id="projects" class="work">
   <h2 class="work-header">Top Personal Projects</h2>
@@ -25,39 +23,36 @@
   </a>
   <a href="https://github.com/lundbird/Material-science-kaggle" target="_blank" class="project project-tile">
     <img class="project-pic" src="photos/SemiConductors.PNG" alt="project">
-    <div class="project-title">SemiConductor Analysis</div>
+    <div class="project-title">Kagle: SemiConductor Analysis</div>
   </a>
   <a href="https://codepen.io/FreeCodeCamp/pen/PNKdjo" target="_blank" class="project project-tile">
     <img class="project-pic" src="https://cloud.githubusercontent.com/assets/15967809/17642772/7d02406c-6171-11e6-8c79-40a2933163dc.png" alt="project">
-    <div class="project-title">Past stock performance doesn't influence future performance</div>
+    <div class="project-title">Why past stock performance does not influence future performance</div>
   </a>
   <a href="https://codepen.io/FreeCodeCamp/pen/mVEJag" target="_blank" class="project project-tile">
     <img class="project-pic" src="https://cloud.githubusercontent.com/assets/15967809/17642773/7d08cb94-6171-11e6-8c45-22e7cf64683e.png" alt="project">
-    <div class="project-title">RaspberryPi Intro</div>
+    <div class="project-title">Get started with RasperryPi</div>
   </a>
   <a href="https://codepen.io/FreeCodeCamp/pen/wGqEga" target="_blank" class="project project-tile">
     <img class="project-pic" src="https://cloud.githubusercontent.com/assets/15967809/17642774/7d091806-6171-11e6-8d47-ecf2f2833fe2.png" alt="project">
-    <div class="project-title">Selenium Robo Investor</div>
+    <div class="project-title">Selenium Robo-Investor with Wealthfront</div>
   </a>
   <a href="https://codepen.io/FreeCodeCamp/pen/KzXQgy" target="_blank" class="project project-tile">
     <img class="project-pic" src="https://cloud.githubusercontent.com/assets/15967809/17642775/7d354304-6171-11e6-8b56-66eee4681d88.png" alt="project">
-    <div class="project-title">Titanic Survival Analysis</div>
+    <div class="project-title">Kaggle: Titanic Survival Analysis</div>
   </a>
 
   <a href="https://codepen.io/FreeCodeCamp/" class="show-all" target="_blank">Show all</a>
 </div>
 <div id="contact" class="contact">
   <div class="header">
-    <h1>Let's work together...</h1>
-    <p>How do you take your coffee?</p>
+    <h1>Let's work together</h1>
   </div>
-  <a href="https://facebook.com/freecodecamp" target="_blank" class="contact-details">Facebook</a>
+  <a href="https://facebook.com/freecodecamp" target="_blank" class="contact-details">LinkedIn</a>
   <a id='profile-link' href="https://github.com/freecodecamp" target="_blank" class="contact-details">GitHub</a>
-  <a href="https://twitter.com/freecodecamp" target="_blank" class="contact-details">Twitter</a>
-  <a href="mailto:example@example.com" class="contact-details">Send a mail</a>
-  <a href="tel:555-555-5555" class="contact-details">Call me</a>
+  <a href="https://twitter.com/freecodecamp" target="_blank" class="contact-details">Youtube</a>
+  <a href="mailto:example@example.com" class="contact-details">Facebook</a>
 </div>
-<footer>**This is just a fake portfolio.. All the projects and contact details given are not real..
-  <p>&copy; Created for <a href="https://www.freecodecamp.com/" target="_blank">FreeCodeCamp</a></p>
+<footer>Template used from <a href="https://www.freecodecamp.com/" target="_blank">FreeCodeCamp</a>
 </footer>
 </html>
