modify stock link

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <img class="project-pic" src="photos/SemiConductors.PNG" alt="project">
     <div class="project-title">Kaggle: SemiConductor Analysis</div>
   </a>
-  <a href="https://github.com/lundbird/stock-price-predictor/blob/master/GrowthVValue.py" target="_blank" class="project project-tile">
+  <a href="https://github.com/lundbird/stock-price-predictor" target="_blank" class="project project-tile">
     <img class="project-pic" src="photos/stock-market" alt="project">
     <div class="project-title">Why past stock price does not predict future price</div>
   </a>
