--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Practice</title>
+    <title>Alex Lundberg</title>
       <link rel="stylesheet" type="text/css" href=portfolio.css>
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   </head>
@@ -32,7 +32,7 @@
     <div class="project-title">Kaggle: SemiConductor Analysis</div>
   </a>
   <a href="https://github.com/lundbird/stock-price-predictor" target="_blank" class="project project-tile">
-    <img class="project-pic" src="photos/stock-market" alt="project">
+    <img class="project-pic" src="photos/stock-market.PNG" alt="project">
     <div class="project-title">Why past stock price does not predict future price</div>
   </a>
   <a href="https://github.com/lundbird/RasperryPiIntro" target="_blank" class="project project-tile">
