--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
     <img id="profile" class="personal-pic" src="photos/Profile.PNG" alt="headshot">
     <div class="text-center">
     <p>Hello, I am currently in my final year studying computer science at UW-Madison. </p>
-        <p>I live to improve my learning through living small, exercising often, and collaborating with everyone.</p>
-    <p>I am interested in all areas of computer science but particularly in machine learning. </p>
+    <p>Avid Developer of open source projects. Currently interested in Python development.  </p>
+      <p>See my open source projects on PyPi.</p>
+      <a href="https://pypi.org/project/autogui">
     </div>
 </div>
 <div id="projects" class="work">
