--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div class="project-title">Why past stock price does not predict future price</div>
   </a>
   <a href="https://github.com/lundbird/AutoGui" target="_blank" class="project project-tile">
-    <img class="project-pic" src="https://circuitdigest.com/sites/default/files/projectimage_mic/controlling-raspberry-pi-gpio-using-telegram-app.jpg" alt="project">
+    <img class="project-pic" src="https://i.stack.imgur.com/FhNOL.jpg" alt="project">
     <div class="project-title">Simple GUI Testing with AutoGui </div>
   </a>
   <a href="https://github.com/lundbird/wealthfront-roboinvestor" target="_blank" class="project project-tile">
