--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
     <div class="text-center">
     <p>Hello, I am currently in my final year studying computer science at UW-Madison. </p>
     <p>Avid Developer of open source projects. Currently interested in Python development.  </p>
-      <p>See my open source projects on PyPi.</p>
-      <a href="https://pypi.org/project/autogui">
+      <a href="https://pypi.org/project/autogui">See my open source projects on PyPi.</a>
     </div>
 </div>
 <div id="projects" class="work">
