--- a/index.html
+++ b/index.html
@@ -16,9 +16,19 @@
   <p color="green">Software Developer</p>
     <img id="profile" class="personal-pic" src="photos/Profile.PNG" alt="headshot">
     <div class="text-center">
-    <p>Hello, I am currently in my final year studying computer science at UW-Madison. </p>
-    <p>Avid Developer of open source projects. Currently interested in Python development.  </p>
-      <a href="https://pypi.org/project/autogui">See my open source projects on PyPi.</a>
+    <p>Hello, I recently graduated from University of Wisconsin - Madison and am beginning my career at Commonbond as a DevOps engineer.
+      I am excited for this fantastic opportunity to work at a company that has adopted the DevOps culture and learn best practices of kubernetes, aws, gitlab, and system administration.
+      </p>
+      <p>
+      I discovered my interest in computer science during my freshman year of college, where I was excited by the fast feedback cycle of programming.
+      I explored my interests with four internships in different fields-- computer vision, software development, data science, and DevOps.
+      My experience as a DevOps intern at a company undergoing the DevOps transition showed me the pain points(works on my machine, configuration drift, pet servers) that DevOps solves,
+      and sparked my interest that I further explored through projects, books, and blogs. 
+      </p>
+      <p>
+        My largest hobby is coding, but in the rest of my free time I enjoy visits with friends and family, a nice dinner with my wife, and the occasional
+        newest dark souls videogame or reruns of silicon valley.
+      </p>
     </div>
 </div>
 <div id="projects" class="work">
