--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <p>Hello, I recently graduated from University of Wisconsin - Madison and am beginning my career at Commonbond as a DevOps engineer.
       I am excited for this fantastic opportunity to work at a company that has adopted the DevOps culture and learn best practices of kubernetes, aws, gitlab, and system administration.
       </p>
-      <p>
+      <p margin=20>
       I discovered my interest in computer science during my freshman year of college, where I was excited by the fast feedback cycle of programming.
       I explored my interests with four internships in different fields-- computer vision, software development, data science, and DevOps.
       My experience as a DevOps intern at a company undergoing the DevOps transition showed me the pain points(works on my machine, configuration drift, pet servers) that DevOps solves,
