--- a/index.html
+++ b/index.html
@@ -1,70 +1,79 @@
 <html>
-  <head>
+
+<head>
     <title>Alex Lundberg</title>
-      <link rel="stylesheet" type="text/css" href=portfolio.css>
-      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  </head>
+    <link rel="stylesheet" type="text/css" href=portfolio.css>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+</head>
 <nav>
-  <ul id='navbar'>
-    <li><a href="#welcome-section">About</a></li>
-    <li><a href="#projects">Work</a></li>
-    <li><a href="#contact">Contact</a></li>
-  </ul>
+    <ul id='navbar'>
+        <li><a href="#welcome-section">About</a></li>
+        <li><a href="#projects">Work</a></li>
+        <li><a href="#contact">Contact</a></li>
+    </ul>
 </nav>
 <div id="welcome-section" class="intro">
-  <h1>Alex Lundberg</h1>
-  <p color="green">Software Developer</p>
+    <h1>Alex Lundberg</h1>
+    <p color="green">Software Developer</p>
     <img id="profile" class="personal-pic" src="photos/Profile.PNG" alt="headshot">
-    <div class="text-center">
-    <p>Hello, I recently graduated from University of Wisconsin - Madison and am beginning my career at Commonbond as a DevOps engineer.
-      I am excited for this fantastic opportunity to work at a company that has adopted the DevOps culture and learn best practices of kubernetes, aws, gitlab, and system administration.
-      </p>
-      <p class="bio">
-      I discovered my interest in computer science during my freshman year of college, where I was excited by the fast feedback cycle of programming.
-      I explored my interests with four internships in different fields-- computer vision, software development, data science, and DevOps.
-      My experience as a DevOps intern at a company undergoing the DevOps transition showed me the pain points(works on my machine, configuration drift, pet servers) that DevOps solves,
-      and sparked my interest that I further explored through projects, books, and blogs. 
-      </p>
-      <p>
-        My largest hobby is coding, but in the rest of my free time I enjoy visits with friends and family, a nice dinner with my wife, and the occasional
-        newest dark souls videogame or reruns of silicon valley.
-      </p>
+    <div class="text-center bio">
+        <p>Hello, I recently graduated from University of Wisconsin - Madison and am beginning my career at Commonbond
+            as a DevOps engineer.
+            I am excited for this fantastic opportunity to work at a company that has adopted the DevOps culture and
+            learn best practices of kubernetes, aws, gitlab, and system administration.
+        </p>
+        <p>
+            I discovered my interest in computer science during my freshman year of college, where I was excited by the
+            fast feedback cycle of programming.
+            I explored my interests with four internships in different fields-- computer vision, software development,
+            data science, and DevOps.
+            My experience as a DevOps intern at a company undergoing the DevOps transition showed me the pain
+            points(works on my machine, configuration drift, pet servers) that DevOps solves,
+            and sparked my interest that I further explored through projects, books, and blogs.
+        </p>
+        <p>
+            My largest hobby is coding, but in the rest of my free time I enjoy visits with friends and family, a nice
+            dinner with my wife, and the occasional
+            newest dark souls videogame or reruns of silicon valley.
+        </p>
     </div>
 </div>
 <div id="projects" class="work">
-  <h2 class="work-header">Top Personal Projects</h2>
-  <a href="https://github.com/lundbird/LeshanRestAPI" target="_blank" class="project project-tile">
-    <img class="project-pic" src="http://www.eclipse.org/leshan/img/multicolor-leshan.png" alt="project">
-    <div class="project-title">LeshanRestAPI</div>
-  </a>
-  <a href="https://github.com/lundbird/Material-science-kaggle" target="_blank" class="project project-tile">
-    <img class="project-pic" src="photos/SemiConductors.PNG" alt="project">
-    <div class="project-title">Kaggle: SemiConductor Analysis</div>
-  </a>
-  <a href="https://github.com/lundbird/stock-price-predictor" target="_blank" class="project project-tile">
-    <img class="project-pic" src="photos/stock-market.PNG" alt="project">
-    <div class="project-title">Why past stock price does not predict future price</div>
-  </a>
-  <a href="https://github.com/lundbird/AutoGui" target="_blank" class="project project-tile">
-    <img class="project-pic" src="https://i.stack.imgur.com/FhNOL.jpg" alt="project">
-    <div class="project-title">Simple GUI Testing with AutoGui </div>
-  </a>
-  <a href="https://github.com/lundbird/wealthfront-roboinvestor" target="_blank" class="project project-tile">
-    <img class="project-pic" src="https://iamhiring.files.wordpress.com/2015/06/selenium-logo.gif" alt="project">
-    <div class="project-title">Selenium Robo-Investor with Wealthfront</div>
-  </a>
-  <a href="https://github.com/lundbird/Kaggle-1" target="_blank" class="project project-tile">
-    <img class="project-pic" src="http://www.image-line.com/innovaeditor/assets/FLStudioLFU.jpg" alt="project">
-    <div class="project-title">MIDI2Go - Convert from hummed tune to midi audio</div>
-  </a>
+    <h2 class="work-header">Top Personal Projects</h2>
+    <a href="https://github.com/lundbird/LeshanRestAPI" target="_blank" class="project project-tile">
+        <img class="project-pic" src="http://www.eclipse.org/leshan/img/multicolor-leshan.png" alt="project">
+        <div class="project-title">LeshanRestAPI</div>
+    </a>
+    <a href="https://github.com/lundbird/Material-science-kaggle" target="_blank" class="project project-tile">
+        <img class="project-pic" src="photos/SemiConductors.PNG" alt="project">
+        <div class="project-title">Kaggle: SemiConductor Analysis</div>
+    </a>
+    <a href="https://github.com/lundbird/stock-price-predictor" target="_blank" class="project project-tile">
+        <img class="project-pic" src="photos/stock-market.PNG" alt="project">
+        <div class="project-title">Why past stock price does not predict future price</div>
+    </a>
+    <a href="https://github.com/lundbird/AutoGui" target="_blank" class="project project-tile">
+        <img class="project-pic" src="https://i.stack.imgur.com/FhNOL.jpg" alt="project">
+        <div class="project-title">Simple GUI Testing with AutoGui </div>
+    </a>
+    <a href="https://github.com/lundbird/wealthfront-roboinvestor" target="_blank" class="project project-tile">
+        <img class="project-pic" src="https://iamhiring.files.wordpress.com/2015/06/selenium-logo.gif" alt="project">
+        <div class="project-title">Selenium Robo-Investor with Wealthfront</div>
+    </a>
+    <a href="https://github.com/lundbird/Kaggle-1" target="_blank" class="project project-tile">
+        <img class="project-pic" src="http://www.image-line.com/innovaeditor/assets/FLStudioLFU.jpg" alt="project">
+        <div class="project-title">MIDI2Go - Convert from hummed tune to midi audio</div>
+    </a>
 </div>
 <div id="contact" class="contact">
-  <div class="header">
-    <h1>Let's work together</h1>
-  </div>
-  <a href="https://www.linkedin.com/in/alexlundberg/" target="_blank" class="contact-details">LinkedIn</a>
-  <a id='profile-link' href="https://github.com/lundbird" target="_blank" class="contact-details">GitHub</a>
+    <div class="header">
+        <h1>Let's work together</h1>
+    </div>
+    <a href="https://www.linkedin.com/in/alexlundberg/" target="_blank" class="contact-details">LinkedIn</a>
+    <a id='profile-link' href="https://github.com/lundbird" target="_blank" class="contact-details">GitHub</a>
 </div>
-<footer>Template used from <a href="https://www.freecodecamp.org/portfolio/fcc0759e835-3ca7-4201-b844-997fa9714114" target="_blank">FreeCodeCamp</a>
+<footer>Template used from <a href="https://www.freecodecamp.org/portfolio/fcc0759e835-3ca7-4201-b844-997fa9714114"
+        target="_blank">FreeCodeCamp</a>
 </footer>
+
 </html>
