--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       My experience as a DevOps intern at a company undergoing the DevOps transition showed me the pain points(works on my machine, configuration drift, pet servers) that DevOps solves,
       and sparked my interest that I further explored through projects, books, and blogs. 
       </p>
-      <p>
+      <p class="bio">
         My largest hobby is coding, but in the rest of my free time I enjoy visits with friends and family, a nice dinner with my wife, and the occasional
         newest dark souls videogame or reruns of silicon valley.
       </p>
