--- a/index.html
+++ b/index.html
@@ -14,27 +14,27 @@
 </nav>
 <div id="welcome-section" class="intro">
     <h1>Alex Lundberg</h1>
-    <p color="green">Software Developer</p>
+    <p color="green">DevOps Engineer</p>
     <img id="profile" class="personal-pic" src="photos/Profile.PNG" alt="headshot">
     <div class="text-center">
-        <p class="bio">Hello, I recently graduated from University of Wisconsin - Madison and am beginning my career at
+        <p class="bio">I recently graduated from University of Wisconsin-Madison and am beginning my career at
             Commonbond as a DevOps engineer.
             I am excited for this fantastic opportunity to work at a company that has adopted the DevOps culture and
             learn best practices of kubernetes, aws, gitlab, and system administration.
         </p>
         <p class="bio">
-            I discovered my interest in computer science during my freshman year of college, where I was excited by the
+            I discovered my interest in computer science during my freshman year of college where I was excited by the
             fast feedback cycle of programming.
-            I explored my interests with four internships in different fields-- computer vision, software development,
+            I explored my interests with four internships in different fields--computer vision, software development,
             data science, and DevOps.
-            My experience as a DevOps intern at a company undergoing the DevOps transition showed me the pain
+            My experience as an intern at a company undergoing the DevOps transition showed me the pain
             points(works on my machine, configuration drift, pet servers) that DevOps solves,
             and sparked my interest that I further explored through projects, books, and blogs.
         </p>
         <p class="bio">
-            My largest hobby is coding, but in the rest of my free time I enjoy visits with friends and family, a nice
-            dinner with my wife, and the occasional
-            newest dark souls videogame or reruns of silicon valley.
+            My largest hobby is coding, but in the rest of my free time I enjoy visits with friends and family, good
+            food, and the occasional
+            newest dark souls videogame or episodes of silicon valley.
         </p>
     </div>
 </div>
