--- a/index.html
+++ b/index.html
@@ -17,15 +17,12 @@
     <p color="green">DevOps Engineer</p>
     <img id="profile" class="personal-pic" src="photos/Profile.PNG" alt="headshot">
     <div class="text-center">
-        <p class="bio">I recently graduated from University of Wisconsin-Madison and am beginning my career at
-            Commonbond as a DevOps engineer.
-            I am excited for this fantastic opportunity to work at a company that has adopted the DevOps culture and
-            learn best practices of kubernetes, aws, gitlab, and system administration.
+        <p class="bio">I recently graduated from University of Wisconsin-Madison and am moving to NYC with my wife who is doing her masters at Columbia. I am very excited to begin my career at Commonbond as a DevOps engineer. 
         </p>
         <p class="bio">
-            I discovered my interest in computer science during my freshman year of college where I was excited by the
+            I originally discovered my interest in computer science during my freshman year where I was excited by the
             fast feedback cycle of programming.
-            I explored my interests with four internships in different fields--computer vision, software development,
+            Later I explored my interests with four internships in different fields--computer vision, software development,
             data science, and DevOps.
             My experience as an intern at a company undergoing the DevOps transition showed me the pain
             points(works on my machine, configuration drift, pet servers) that DevOps solves,
